--- a/signature-engine-backend/package.json
+++ b/signature-engine-backend/package.json
@@ -2,7 +2,7 @@
   "name": "signature-engine-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11",
     "pdf-lib": "^1.17.1"
   }
